# kwprocessor-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  bench_quick.sh  bench_v2_quick.sh
examples/: README.md
examples/generators/: build_human_keyboard_wordlist.sh  build_human_keyboard_wordlist_large.sh  gen_human_keyboard_walks.py
examples/specs/human-keyboard-v2/basechars/: full_all.base  full_basic.base  home_left_basic.base  home_left_full.base  left_basic.base  left_full.base  num_left_full.base  right_basic.base  right_full.base
examples/specs/human-keyboard-v2/routes/: special_sawtooth.route  tier1_straight.route  tier2_one_turn.route  tier3_two_turns.route  tier4_three_turns.route  tier5_complex.route
examples/wordlists/: human-keyboard-walks-curated.txt
src/: app.rs  cli.rs  cli_short.rs  config.rs  constants.rs  error.rs  generator.rs  keymap.rs  main.rs  model.rs  output.rs  parser.rs  route.rs  tests.rs
tests/: compare_with_c.py
